updated that stupid ball

--- a/Formulas.lyx
+++ b/Formulas.lyx
@@ -28,7 +28,7 @@
 \spacing single
 \use_hyperref false
 \papersize default
-\use_geometry false
+\use_geometry true
 \use_amsmath 1
 \use_esint 1
 \use_mhchem 1
@@ -43,6 +43,10 @@
 \shortcut idx
 \color #008000
 \end_index
+\leftmargin 2.5cm
+\topmargin 2.5cm
+\rightmargin 2.5cm
+\bottommargin 2.5cm
 \secnumdepth 3
 \tocdepth 3
 \paragraph_separation skip
@@ -73,6 +77,71 @@ Maxwell stress tensor:
 \end_layout
 
 \begin_layout Standard
+Electrostatic: 
+\begin_inset Formula $\sigma_{ij}=-\epsilon_{0}E_{i}E_{j}+\frac{1}{2}\delta_{ij}\epsilon_{0}E^{2}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection*
+Anisotropic electrostatic stress tensor
+\end_layout
+
+\begin_layout Standard
+As given by Joseph Bar-Cohen
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\sigma_{ij}=-E_{i}D_{j}+\frac{1}{2}\delta_{ij}D_{k}E_{k}=-E_{i}D_{j}+\frac{1}{2}\delta_{ij}(D_{1}E_{1}+D_{2}E_{2}+D_{3}E_{3})$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $D_{i}=\varepsilon_{ij}E_{j}$
+\end_inset
+
+ 
+\begin_inset space ~
+\end_inset
+
+ (Einstein summation)
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\sigma_{ij}=-\varepsilon_{im}E_{i}E_{m}+\frac{1}{2}\delta_{ij}\varepsilon_{mk}E_{m}E_{k}$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\sigma_{ij}=-(\varepsilon_{i1}E_{i}E_{1}+\varepsilon_{i2}E_{i}E_{2}+\varepsilon_{i3}E_{i}E_{3})+$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\SpecialChar \-
+
+\begin_inset space \qquad{}
+\end_inset
+
+
+\begin_inset space \qquad{}
+\end_inset
+
+
+\begin_inset Formula $\frac{1}{2}\delta_{ij}((\varepsilon_{11}E_{1}+\varepsilon_{12}E_{2}+\varepsilon_{13}E_{3})E_{1}+(\varepsilon_{21}E_{1}+\varepsilon_{22}E_{2}+\varepsilon_{23}E_{3})E_{2}+(\varepsilon_{31}E_{1}+\varepsilon_{32}E_{2}+\varepsilon_{33}E_{3})E_{3})$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 \begin_inset VSpace bigskip
 \end_inset
 
@@ -80,88 +149,124 @@ Maxwell stress tensor:
 \end_layout
 
 \begin_layout Standard
-Differential form for boundary: 
-\begin_inset Formula $\left(\frac{dF}{ds}\right)=\frac{-t_{0}}{2}H^{2}\vec{n}+\mu_{0}(\vec{H}\vec{n})\vec{H}$
+\begin_inset Formula $E=\nabla\phi$
 \end_inset
 
- 
-\begin_inset space ~
+ , 
+\begin_inset Formula $\partial_{x}\cdot=\frac{\partial\cdot}{\partial x}$
 \end_inset
 
- [0] 
-\begin_inset space ~
-\end_inset
-
- then 
-\begin_inset Formula $\int$
+ , 
+\begin_inset Formula $\cdot_{x}=\partial_{x}$
 \end_inset
 
 
 \end_layout
 
 \begin_layout Standard
-ToDo: find formula for volume
-\end_layout
-
-\begin_layout Standard
-[0] 
-\begin_inset Quotes eld
-\end_inset
-
-Propulsive force calculation methods using finite element simulations of
- a linear actuator
-\begin_inset Quotes erd
+\begin_inset Formula $\sigma_{ij}=-(\varepsilon_{i1}\phi_{i}\phi_{1}+\varepsilon_{i2}\phi_{i}\phi_{2}+\varepsilon_{i2}\phi_{i}\phi_{3})+$
 \end_inset
 
 
 \end_layout
 
-\begin_layout Subsection*
-Anisotropic
-\end_layout
-
 \begin_layout Standard
-Plug 
-\begin_inset Formula $\vec{E}$
-\end_inset
+\SpecialChar \-
 
- into above formula and use 
-\begin_inset Formula $\varepsilon=\underbar{\varepsilon}(\vec{r})$
+\begin_inset space \qquad{}
 \end_inset
 
 
-\end_layout
-
-\begin_layout Subsection*
-Boundary conditions
-\end_layout
-
-\begin_layout Standard
-for both 
-\begin_inset Formula $E$
+\begin_inset space \qquad{}
 \end_inset
 
- and 
-\begin_inset Formula $B$
+
+\begin_inset Formula $\frac{1}{2}\delta_{ij}((\varepsilon_{11}\phi_{1}+\varepsilon_{12}\phi_{2}+\varepsilon_{13}\phi_{3})\phi_{1}+(\varepsilon_{21}\phi_{1}+\varepsilon_{22}\phi_{2}+\varepsilon_{23}\phi_{3})\phi_{2}+(\varepsilon_{31}\phi_{1}+\varepsilon_{32}\phi_{2}+\varepsilon_{33}\phi_{3})\phi_{3})$
 \end_inset
 
-, just define a potential (see publications)
-\end_layout
 
-\begin_layout Subsection*
-Time evolution
 \end_layout
 
 \begin_layout Standard
-Needs to handle elasticity as well
+\begin_inset Formula $\sigma_{ij}=-(\varepsilon_{i1}\phi_{i}\phi_{1}+\varepsilon_{i2}\phi_{i}\phi_{2}+\varepsilon_{i2}\phi_{i}\phi_{3})+$
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
-Spectral method by hand (not supported in FF)
+\SpecialChar \-
+
+\begin_inset space \qquad{}
+\end_inset
+
+
+\begin_inset space \qquad{}
+\end_inset
+
+
+\begin_inset Formula $\frac{1}{2}\delta_{ij}(\varepsilon_{11}\phi_{1}\phi_{1}+\varepsilon_{12}\phi_{2}\phi_{1}+\varepsilon_{13}\phi_{3}\phi_{1}+(\varepsilon_{21}\phi_{1}\phi_{2}+\varepsilon_{22}\phi_{2}\phi_{2}+\varepsilon_{23}\phi_{3}\phi_{2}+\varepsilon_{31}\phi_{1}\phi_{3}+\varepsilon_{32}\phi_{2}\phi_{3}+\varepsilon_{33}\phi_{3}\phi_{3})$
+\end_inset
+
+
+\begin_inset Formula $\sigma_{ij}=-(\varepsilon_{i1}(\phi_{i}\phi+\phi\phi_{1}???????????)+\varepsilon_{i2}\phi_{i}\phi_{2}+\varepsilon_{i2}\phi_{i}\phi_{3})+$
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
-Time stepping supported in FF
+\SpecialChar \-
+
+\begin_inset space \qquad{}
+\end_inset
+
+
+\begin_inset space \qquad{}
+\end_inset
+
+
+\begin_inset Formula $\frac{1}{2}\delta_{ij}(\varepsilon_{11}\phi_{1}\phi_{1}+\varepsilon_{12}\phi_{2}\phi_{1}+\varepsilon_{13}\phi_{3}\phi_{1}+(\varepsilon_{21}\phi_{1}\phi_{2}+\varepsilon_{22}\phi_{2}\phi_{2}+\varepsilon_{23}\phi_{3}\phi_{2}+\varepsilon_{31}\phi_{1}\phi_{3}+\varepsilon_{32}\phi_{2}\phi_{3}+\varepsilon_{33}\phi_{3}\phi_{3})$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $\sigma_{ij}=\left(\begin{array}{ccc}
+...\\
+\\
+\\
+\end{array}\right)$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset VSpace bigskip
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Finite volume force 
+\begin_inset Formula $f=\nabla\sigma$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Force 2-dim 
+\begin_inset Formula $f=\left(\begin{array}{c}
+\partial_{x}\sigma_{11}+\partial_{y}\sigma_{12}\\
+\partial_{x}\sigma_{21}+\partial_{y}\sigma_{22}
+\end{array}\right)$
+\end_inset
+
+
 \end_layout
 
 \end_body
