cleanup, merge, reorganise

--- a/presentation/presentation_theory_EAPs.lyx
+++ b/presentation/presentation_theory_EAPs.lyx
@@ -936,6 +936,10 @@ filename "electrostaticVariational.tex"
 
 \end_layout
 
+\begin_layout Standard
+
+\end_layout
+
 \begin_layout EndFrame
 
 \end_layout
